# booker

./: .gitignore  Dockerfile  build.sh  db.sqlite3  dupli.py  fly.toml  pyproject.toml  render.yaml  requirements.txt
apps/apartments/: admin.py  models.py  serializers.py  services.py  signals.py  urls.py  utils.py  views.py
apps/apartments/migrations/: 0001_initial.py  0002_remove_apartmentaddress_latitude_and_more.py  0003_apartment_amenities_delete_apartmentamenity.py  0004_alter_apartmentpricing_currency.py  0005_alter_apartmentimage_image.py  0006_alter_apartmentimage_apartment.py  0007_apartment_image_apartment_is_cover_and_more.py  0008_alter_apartment_image.py  0009_alter_apartment_image.py
apps/base/: account_utils.py  choices.py  models.py
apps/bookings/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/bookings/migrations/: 0001_initial.py  0002_alter_booking_total_price.py  0003_payment_method_changed.py
apps/notifications/: admin.py  apps.py  models.py  serializers.py  signals.py
apps/notifications/migrations/: 0001_initial.py  0002_alter_notification_user.py  0003_alter_notification_user.py  0004_alter_notification_related_user.py  0005_alter_notification_user.py  (+1 more)
apps/reviews/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/user/: managers.py  models.py  serializers.py  urls.py  views.py
core/: settings.py  urls.py
templates/: test_payment.html
templates/emails/: apartment_available.html  apartment_verified.html  booking_cancelled.html  booking_confirmed.html  otp_email.html  welcome_user.html
(+3 files in other folders)
